Set z-index to 0 for map controls to prevent overlapping with user menu.

--- a/src/app/pages/info-event/info-event.component.css
+++ b/src/app/pages/info-event/info-event.component.css
@@ -20,6 +20,7 @@
     height: 300px; /* o specifica un'altezza in pixel */
     margin-left: 25%;
     margin-top: 10px;
+    z-index: 0;
 }
 
 .dataColumn{
